kube-files/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/warmy-homes-turkey-warmy-net: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: password
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://db:5432/warmy_homes_db
            - name: SPRING_DATASOURCE_USERNAME
              value: dev_user
          image: korayayakin/backend1
          name: backend
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
      restartPolicy: Always
