kube-files/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/warmy-homes-turkey-warmy-net: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: warmy_homes_db
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: dev_user
          image: postgres:13
          name: postgres
          ports:
            - containerPort: 5432
              hostPort: 5432
              protocol: TCP
      restartPolicy: Always
