kube-files/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.service.expose: devopsandcloudsolutionskorayayakin.org
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: ui
  name: ui
spec:
  rules:
    - host: devopsandcloudsolutionskorayayakin.org
      http:
        paths:
          - backend:
              service:
                name: ui
                port:
                  number: 3000
            path: /
            pathType: Prefix
